@@ -1,7 +1,6 @@
 package ledger.util;
 
-import lombok.AllArgsConstructor;
-import org.jboss.logging.Logger;
+import lombok.NoArgsConstructor;
 
 import java.io.FileWriter;
 import java.io.IOException;
@@ -11,20 +10,18 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 
-@AllArgsConstructor
+@NoArgsConstructor
 public class ObjectToCsvUtil<T> {
 
-    private Logger log;
-
-    public void writeListToCsv(List<T> objects, String filePath) {
+    public String generateCSV(List<T> objects) throws IllegalAccessException {
         StringBuilder csvContent = new StringBuilder();
 
         if (objects == null || objects.isEmpty()) {
-            return;
+            return null;
         }
 
         // Assuming all objects are of the same type, get field names from the first object
-        Field[] fields = objects.get(0).getClass().getDeclaredFields();
+        Field[] fields = objects.getFirst().getClass().getDeclaredFields();
         for (Field field : fields) {
             csvContent.append(field.getName()).append(",");
         }
@@ -34,28 +31,22 @@ public class ObjectToCsvUtil<T> {
         // Process each object
         for (T obj : objects) {
             for (Field field : fields) {
-                try {
-                    field.setAccessible(true); // Make private fields accessible
-                    Object value = field.get(obj);
-                    csvContent.append(value).append(",");
-                } catch (IllegalAccessException e) {
-                    e.printStackTrace();
-                }
+                field.setAccessible(true); // Make private fields accessible
+                Object value = field.get(obj);
+                csvContent.append(value).append(",");
             }
             csvContent.deleteCharAt(csvContent.length() - 1); // Remove the last comma
             csvContent.append("\n");
         }
+        return csvContent.toString();
+    }
 
-        try {
-            Path pathToFile = Paths.get(filePath);
-            Files.createDirectories(pathToFile.getParent()); // Create parent directories if they don't exist
-
-            // Use try-with-resources to ensure FileWriter is closed properly
-            try (FileWriter writer = new FileWriter(filePath)) {
-                writer.write(csvContent.toString());
-            }
-        } catch (IOException e) {
-            log.error(e);
+    public void writeListToCsv(List<T> objects, String filePath) throws IOException, IllegalAccessException {
+        Path pathToFile = Paths.get(filePath);
+        Files.createDirectories(pathToFile.getParent()); // Create parent directories if they don't exist
+        // Use try-with-resources to ensure FileWriter is closed properly
+        try (FileWriter writer = new FileWriter(filePath)) {
+            writer.write(generateCSV(objects));
         }
     }
 }
